# vacuum-launcher

./: .gitignore  BACKEND.md  Cargo.toml  README.md  build.rs  test_backend.sh
cava_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: actions.rs  cava.rs  collectors.rs  config.rs  daemon.rs  lib.rs  main.rs  state.rs  weather.rs
