[package]
name = "vacuum-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
sysinfo = "0.30"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread", "sync"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = "0.28"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2.1"

[features]
default = []
cava = []

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
